[package]
name = "comedy"
version = "0.1.0-alpha1"
authors = ["Adam Gashlin <agashlin@mozilla.com>"]
description = "Windows error handling, COM, and handles"
keywords = ["windows", "com", "win32"]
categories = ["api-bindings", "os::windows-apis"]
license = "MIT/Apache-2.0"
repository = "https://github.com/agashlin/comedy"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies.failure]
version = "0.1.3"
features = ["derive"]
default_features = false

[dependencies.failure_derive]
version = "0.1.3"

[dependencies.winapi]
version = "0.3.6"
features = ["basetsd",
            "combaseapi",
            "errhandlingapi",
            "handleapi",
            "impl-default",
            "minwindef",
            "objbase",
            "unknwnbase",
            "winbase",
            "winerror",
            "wtypes",
            "wtypesbase",
            ]
